# bazel-template

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  BUILD.bazel  Directory.Build.targets  Directory.Packages.props  README.md  WORKSPACE  nuget-lock.bzl  nuget.config  vb.sln
devtools/bazel/: BUILD.bazel  Bazel.targets  install.ps1  projects_repo.bzl  publish.bzl  publish.ps1  test.bzl  workspace_config.bzl  zip.bzl
devtools/bazel/dotnet/: BUILD.bazel  Directory.Packages.props  defs.bzl  nuget-lock.bzl  repositories.bzl  rules_dotnet_nuget_packages.bzl
devtools/bazel/dotnet/private/: common.bzl  providers.bzl
devtools/bazel/dotnet/private/macros/: register_rids.bzl  register_tfms.bzl
devtools/bazel/dotnet/private/rules/nuget/: BUILD.bazel  imports.bzl  nuget_archive.bzl  nuget_repo.bzl  template.BUILD
devtools/bazel/dotnet/private/transitions/: tfm_transition.bzl
devtools/bazel/nuget/: BUILD.bazel  BazelDotnet.sln
devtools/bazel/nuget/src/Afas.BazelDotnet/: Afas.BazelDotnet.csproj  BUILD  BUILD.bazel
devtools/bazel/nuget/src/Afas.BazelDotnet/BazelDotnet/: Program.cs
devtools/bazel/nuget/src/Afas.BazelDotnet/BazelDotnet.Nuget/: DependencyResolver.cs  FrameworkDependencyResolver.cs  LockFileGenerator.cs  NugetRepositoryEntry.cs
devtools/bazel/rules_dotnet/: BUILD  README.md
devtools/bazel/rules_dotnet/dotnet/: defs.bzl  sdk.bzl
devtools/bazel/rules_dotnet/dotnet/private/: BUILD  BUILD.sdk.bazel  context.bzl  json.bzl  runfiles.bzl  shim.ps1
devtools/bazel/rules_dotnet/dotnet/private/actions/: assembly.bzl  conflict_resolution.bzl  xaml.bzl
devtools/bazel/rules_dotnet/dotnet/private/rules/: binary.bzl
devtools/bazel/rules_dotnet/tools/loader/: BUILD  BazelManifest.cs  StartupHook.cs
devtools/bazel/rules_dotnet/tools/markup/: BUILD  Program.cs  markup.csproj
devtools/bazel/rules_dotnet/tools/server/: BuildProtocol.cs  Client.cs  Program.cs
devtools/bazel/rules_dotnet/tools/simpleresgen/: BUILD  Program.cs  Translator.cs
devtools/bazel/rules_dotnet/tools/simpleresgen/ResourceHandling/: InputFormatNotSupportedException.cs  MSBuildResXException.cs  PreserializedResourceWriterRequiredException.cs
devtools/scripts/: bazel_dotnet.ps1  invoke_bazel_dotnet.ps1
src/Afas.CS/: BUILD  Program.cs
src/Afas.VB/: Afas.VB.vbproj  BUILD  Program.vb
